--- a/CBJ_1274/CBJ_1274.csproj
+++ b/CBJ_1274/CBJ_1274.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A6554C0C-1BD5-46FE-AA74-A7B101680131}</ProjectGuid>
+    <ProjectGuid>{7007C70B-BECA-447E-822B-4E99EBEBBBC7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BBG2DB</RootNamespace>
-    <AssemblyName>BBG2DB</AssemblyName>
+    <RootNamespace>_1274</RootNamespace>
+    <AssemblyName>1274</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="CBJ_2169.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
